* Rename Fuse.String#dasherize to `hyphenate`, variables used in String methods from `hash` to `object`, and Fuse.Class private `_emptyFunction` to `_subclass`. [jddalton, kangax, Valerio Proietti]
  Note: Backwards compatibility warning.

* Optimize Hash objects by adding a Fuse.Hash#_data property and correct the Fuse.Hash#_object property. [jddalton]

* Use 1 * foo to more quickly coerce data to numbers instead of +foo. [kangax]

* Change Array method internals from Fuse.Object -> Object usage and throw a TypeError if `this` is null/undefined. [jddalton]

* Ensure the `object` argument of Fuse.Object.hasKey() is coerced to an object in all forks of the method. [jddalton] 

* Ensure LINK elements collected in the dom-loaded solution have a `rel` attribute of `stylesheet` (case-insensitive). [jddalton, Simo Kinnunen]

* Allow Element#insert, Element#setStyle, Element#writeAttribute, Fuse.Ajax.Request#setRequestHeaders, and Fuse.Ajax.Responders#register to accept a Fuse.Hash object. [Prototype LH #718] [jddalton, Matthew Guscott]

* Pass global instead of null to Function#call and Function#apply. [jddalton]

* Remove respondToReadyState() from the dom-loaded solution, tweak the `doScroll` approach, and ensure `readyState` and `doScroll` approaches continue until one succeeds. [Hedger Wang, jddalton, Thomas Aylott]

* Make Fuse.Array.Plugin methods use bitwise shift operators >>> and >> instead of parseInt(). [Ben Laurie, jddalton]

* Ensure String primatives are passed to eval(). [jddalton]

* Optmized Fuse.Number#toPaddedString by avoiding costly method calls. [jddalton]

* Ensure String#lastIndexOf returns Fuse.Number() values and make string methods conform to spec by cohercing `this` to a string and throwing if `this` is null/undefined. [jddalton]

* Optimize Fuse.String#trim. [jQuery Trac #2279] [Ariel Flesler, DarkRyder, jddalton, phpmyforum, Steven Levithan]
